# portfolio-analysis-recommendations

./: .gitignore  CODING_AGENT_PROMPT.md  INIT_PROMPT.md  My-2026 Trading Plan-V2-Jan31st-for-2026.docx.md  README.md  launch.sh
portfolio-advisor/: .env.example  CLAUDE_PROGRESS.md  FEATURES.json  init.sh  pyproject.toml
portfolio-advisor/backend/: main.py  market_data.py  models.py  portfolio_aggregator.py
portfolio-advisor/backend/agent/: harness.py  prompts.py
portfolio-advisor/backend/parsers/: tasty_parser.py  tos_parser.py
portfolio-advisor/data/sample/: sample_tasty.csv  sample_tos.csv
portfolio-advisor/docs/: trade_plan.md
portfolio-advisor/frontend/: index.html  package-lock.json  package.json
portfolio-advisor/frontend/src/: App.jsx
portfolio-advisor/frontend/src/components/: GreeksDisplay.jsx  PortfolioSummary.jsx  PositionsTable.jsx  RecommendationsPanel.jsx  UploadPanel.jsx
